fix THIS PROBLEM

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-  <script src="./robot.js"></script>
+  <script src="./robot.js">
+  
+  
+  </script>
 </body>
 
 </html>
